Corrigir bug de StringIndexOutOfBoundsException no tratamento de conflitos de horário e melhorar sistema de validação